<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:padding="2dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingBottom="0dp"
        app:cardCornerRadius="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:text="@string/create_batch"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/batch_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/batchname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:ems="10"
                android:hint="@string/batch_namehint"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/lightDark"
                android:autofillHints="" />
        </GridLayout>

        <GridLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/year"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/batchyear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/batch_year"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/black"
                android:textColorHint="@color/lightDark" />


        </GridLayout>

        <GridLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginTop="30dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <Button
                android:id="@+id/cancel"
                android:layout_height="40dp"
                android:layout_columnWeight="1"
                android:layout_marginEnd="1px"
                android:backgroundTint="#ffffff"
                android:text="@string/cancel"
                android:textColor="#353434" />

            <Button
                android:id="@+id/create"
                android:layout_height="40dp"
                android:layout_columnWeight="1"
                android:layout_marginStart="1px"
                android:backgroundTint="#ffffff"
                android:text="@string/create"
                android:textColor="#353434" />
        </GridLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>