<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    app:cardBackgroundColor="@color/white"
    android:paddingTop="90dp"
    app:cardCornerRadius="10dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_height="match_parent"
    android:paddingTop="11dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/set_result_configuration"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        />
<EditText
    android:layout_marginVertical="20dp"
    android:id="@+id/resultLink"
    android:textColor="@color/black"
    android:layout_height="50dp"
    android:layout_marginHorizontal="10dp"
    android:layout_gravity="center_horizontal"
    android:hint="@string/paste_result_site_address_here"
    android:textColorHint="@color/lightDark"
    android:layout_width="350dp"
    android:autofillHints=""
    android:inputType="textPersonName" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        android:text="@string/set_result_mode"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="@color/white"
        android:layout_marginTop="13dp"
        android:id="@+id/setokResult"
        android:text="ok"
        android:textColor="@color/black"
        />


</LinearLayout>
</androidx.cardview.widget.CardView>