<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingVertical="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="5dp"
        android:text="@string/get_data"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"

        android:paddingHorizontal="8dp"
        android:text="@string/batch_request_discription"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/batchname_of_approver"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/downloadbatchName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter the approver batch name"
            android:textColor="@color/black"
            android:textColorHint="@color/lightDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/downloadName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_the_name"
            android:textColor="@color/black"
            android:textColorHint="@color/lightDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_pin"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/downloadPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_the_pin"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/lightDark"
            tools:ignore="TextFields" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="cencel"
            android:layout_margin="0dp"
            android:textColor="@color/black"
            android:id="@+id/cancelrequest"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="0dp"
            android:background="@color/white"
            android:text="request"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:id="@+id/requestupload"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>