<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_anim_1"
    tools:context=".HelpMenuOptionActivity">
    <LinearLayout
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:text="Help"
             android:textSize="30dp"
            android:textColor="#272727"
            />
        <View
            android:background="#AEAEAE"
            android:layout_height="2dp"
            android:layout_marginVertical="3dp"
            android:layout_width="match_parent"
            />
        <TextView
            android:layout_marginVertical="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="19dp"
            android:text="@string/whatsapp_share_not_working"
            android:textColor="@color/black"
            />
        <View
            android:background="#AEAEAE"
            android:layout_height="2dp"
            android:layout_marginVertical="3dp"
            android:layout_width="250dp"
            />

        <TextView
            android:layout_marginVertical="10dp"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/whtsapp_not_working"
            android:textColor="#373636" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:padding="15dp"
            android:layout_marginHorizontal="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:layout_height="wrap_content">


        <ImageView
            android:layout_height="550dp"
            android:scaleType="fitXY"

            android:layout_marginBottom="5dp"
            android:src="@drawable/accessiblity_serivice_image"
            android:layout_width="wrap_content"
            />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_marginVertical="6dp"
            android:textSize="13dp"
            android:layout_height="wrap_content"
            android:onClick="goToAccessibility"
            android:layout_width="match_parent"
            android:text="go to settings?"
            android:textColor="#299DF6" />



        <TextView
            android:layout_marginVertical="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:text="password forgotton?"
            android:textColor="@color/black"
            />
        <View
            android:background="#AEAEAE"
            android:layout_height="2dp"
            android:layout_marginVertical="3dp"
            android:layout_width="190dp"
            />
        <TextView
            android:layout_marginVertical="2dp"
            android:textSize="15dp"

            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/password_forgotton_details"
            android:textColor="@color/black" />
        <TextView
            android:layout_marginVertical="10dp"
            android:textSize="13dp"
            android:onClick="passwordReset"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Reset password?"

            android:textColor="#299DF6" />


    </LinearLayout>

</ScrollView>