<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_corners"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <View
        android:layout_width="80dp"
        android:layout_height="8dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/crossbar_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/send_message"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:backgroundTintMode="src_in"
                app:cardBackgroundColor="#E3E3E3"
                app:cardCornerRadius="20dp"
                app:cardElevation="12dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp" />


            </androidx.cardview.widget.CardView>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="horizontal"
                android:paddingHorizontal="2dp">

                <TextView
                    android:layout_width="90dp"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Send through:"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/whtsappSelection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:checked="true"
                    android:textSize="12dp"
                    android:text="whatsapp"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/smsSelection"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="SMS"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/bothwhtsAndSMSSelection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="Both"
                    android:textSize="12dp"
                    android:textColor="@color/black" />

            </LinearLayout>
            </HorizontalScrollView>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="2dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="send to:"
                    android:textSize="12dp"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/isParentSelected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:checked="true"
                    android:text="Parent"
                    android:textSize="12dp"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/isStudentSelected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="Student"
                    android:textSize="12dp"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/isBothParentAndStudentSelected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="both"
                    android:textSize="12dp"
                    android:textColor="@color/black" />

            </LinearLayout>
            </HorizontalScrollView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/linearexpand"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="You can also use variables"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgDrop_send"
                    android:layout_gravity="center"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/arrow_down_24" />
            </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/expandcard"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginVertical="10dp"
                        android:padding="5dp"
                        android:text="@string/variable_declaration"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Gender pronounce:"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/mesEditGender"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/gradient_border"
                            android:hint="m/f"
                            android:paddingHorizontal="5dp"
                            android:text="son/daughter"
                            android:textColor="@color/black"
                            android:textColorHint="@color/lightDark"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Date :"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/mesDatetime"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:background="@drawable/gradient_border"
                            android:hint="Enter date manually/optional"
                            android:paddingHorizontal="5dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/lightDark"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Time :"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/mesEditime"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:background="@drawable/gradient_border"
                            android:hint="Enter time manually"
                            android:paddingHorizontal="5dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/lightDark"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:text="Message body"
                android:textColor="@color/black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">


                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/gradient_border"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:text="@string/parent_message"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


            </androidx.cardview.widget.CardView>

            <Switch
                android:id="@+id/saveprefrencesend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/save_prefrence"
                android:textColor="@color/black"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500">

        <Button
            android:id="@+id/cancel_message_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/send_message_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="send"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
</ScrollView>